namespace BrainDump.Domain.Entities;

public class Label
{
    public int Id { get; set; }
    public string Name { get; set; } = string.Empty;
}
